Finish styles for first page

--- a/src/components/Filters/SearchPokemon/SearchPokemon.scss
+++ b/src/components/Filters/SearchPokemon/SearchPokemon.scss
@@ -2,7 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px 20px;
+  margin: 20px;
+  position: fixed;
+  margin: 0;
+  width: 100%;
+  padding: 20px;
+  background-color: rgba(255, 215, 0, 0.8);
 }
 
 .search__label--poke {
