--- a/src/components/PokeList/PokeList.scss
+++ b/src/components/PokeList/PokeList.scss
@@ -8,6 +8,11 @@
   padding: 100px 0 50px 0;
 }
 
+.link__poke {
+  text-decoration: none;
+  color: black;
+}
+
 .list__item--poke {
   display: flex;
   flex-direction: column;
@@ -72,4 +77,15 @@
   background-color: black;
   color: white;
   font-size: 14px;
+}
+
+.poke__evolutions--list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+}
+
+.poke__evolution {
+  margin: 0;
 }
