--- a/src/components/PokeList/PokeList.scss
+++ b/src/components/PokeList/PokeList.scss
@@ -38,7 +38,7 @@
 .poke__image--wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 200px;
 }
 
@@ -51,15 +51,16 @@
   text-transform: uppercase;
   font-size: 12px;
   width: 200px;
+  position: absolute;
 }
 
 .poke__text--wrapper {
   background-color: white;
-  text-transform: capitalize;
 }
 
 .poke__name {
   margin: 0;
+  text-transform: capitalize;
 }
 
 .poke__types--list {
@@ -68,6 +69,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  text-transform: capitalize;
 }
 
 .poke__type {
@@ -84,8 +86,15 @@
   margin: 0;
   padding: 0;
   font-size: 12px;
+  border-left: 5px solid grey;
+  padding-left: 5px;
 }
 
 .poke__evolution {
   margin: 0;
+  font-size: 10px;
+}
+
+.poke__evolution--type {
+  text-transform: capitalize;
 }
